--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ python-jose[cryptography]==3.3.0
 python-multipart>=0.0.12
 requests>=2.31.0
 bcrypt==4.0.1
+pg8000>=1.30.0
+scramp>=1.4.4
+supabase>=2.0.0
